# PyroLand

./: LICENSE  README.md  pyproject.toml  pyroland.spec
src/pyroland/: main.py
src/pyroland/controllers/: corrections_controller.py  corrections_info_controller.py  file_controller.py  main_controller.py  plot_controller.py  temperature_controller.py
src/pyroland/corrections/controllers/: camera_qe_efficiency_corrector.py  fiber_attenuation_corrector.py  grating_corrector.py
src/pyroland/corrections/correctors/: qth10_lamp_lens_corrector.py  spec_silv_mirror_corrector.py
src/pyroland/corrections/data/: QTH_lamp_lens.csv  camera_quantum_efficiency.csv  fiber_M59L02-attenuation.csv  grating_600lm_500nmBlaze_efficiency.csv  spectrometer_silvered-mirrors_reflectivity.csv
src/pyroland/gui/ui/: mainwindow.py  mainwindow.ui
src/pyroland/scripts/: temperature_fitter.py
src/pyroland/util/: resources.py
